# binaryen-wasm-opt

./: Cargo.toml  Deployment.md  Dockerfile  Readme.md  action.yml
.github/workflows/: ci-tests.yaml  ci.yaml  docker-publish.yml
src/: main.rs
