[package]
protocol = "sparse"
name = "binaryen-wasm-opt"
description = "Slim wrapper around wasm-opt"
version = "0.1.0"
authors = ["Niklas Eicker <git@nikl.me>, Johannes Deml <public@deml.io>"]
edition = "2021"
publish = false

[dependencies]
flate2 = "1.0"
glob = "0.3.0"
shell-words = "1"
tar = "0.4"
ureq = "2.9"
